y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        |

   8  decl : type ID ';'

   9  type : INT
  10       | FLOAT
  11       | BOOL

  12  lcmd : lcmd cmd
  13       |

  14  cmd : ID '=' exp ';'
  15      | '{' lcmd '}'
  16      | exp ';'
  17      | WRITE '(' LIT ')' ';'

  18  $$4 :

  19  cmd : WRITE '(' LIT $$4 ',' exp ')' ';'
  20      | READ '(' ID ')' ';'

  21  $$5 :

  22  $$6 :

  23  cmd : WHILE $$5 '(' exp ')' $$6 cmd

  24  $$7 :

  25  cmd : IF '(' exp $$7 ')' cmd restoIf

  26  $$8 :

  27  restoIf : ELSE $$8 cmd
  28          |

  29  exp : NUM
  30      | TRUE
  31      | FALSE
  32      | ID
  33      | '(' exp ')'
  34      | '!' exp
  35      | exp '+' exp
  36      | exp '-' exp
  37      | exp '*' exp
  38      | exp '/' exp
  39      | exp '%' exp
  40      | exp '>' exp
  41      | exp '<' exp
  42      | exp EQ exp
  43      | exp LEQ exp
  44      | exp GEQ exp
  45      | exp NEQ exp
  46      | exp OR exp
  47      | exp AND exp

  48  $$9 :

  49  $$10 :

  50  exp : exp '?' $$9 exp ':' $$10 exp
  51      | ID '=' exp
  52      | ID SEQ exp
  53      | ID MEQ exp
  54      | INC ID
  55      | DEC ID
  56      | ID INC
  57      | ID DEC

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 7
	decl  goto 8


state 3
	type : INT .  (9)

	.  reduce 9


state 4
	type : FLOAT .  (10)

	.  reduce 10


state 5
	type : BOOL .  (11)

	.  reduce 11


state 6
	decl : type . ID ';'  (8)

	ID  shift 9
	.  error


state 7
	prog : $$1 dList . mainF  (2)

	VOID  shift 10
	.  error

	mainF  goto 11


state 8
	dList : decl . dList  (6)
	dList : .  (7)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	VOID  reduce 7

	type  goto 6
	dList  goto 12
	decl  goto 8


state 9
	decl : type ID . ';'  (8)

	';'  shift 13
	.  error


state 10
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 14
	.  error


state 11
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 12
	dList : decl dList .  (6)

	.  reduce 6


state 13
	decl : type ID ';' .  (8)

	.  reduce 8


state 14
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 15
	.  error


state 15
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 16
	.  error


state 16
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 17


state 17
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 18
	.  error


state 18
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 19


state 19
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (12)
	$$3 : .  (4)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	'{'  shift 32
	'}'  reduce 4

	$$3  goto 33
	cmd  goto 34
	exp  goto 35


state 20
	cmd : ID . '=' exp ';'  (14)
	exp : ID .  (32)
	exp : ID . '=' exp  (51)
	exp : ID . SEQ exp  (52)
	exp : ID . MEQ exp  (53)
	exp : ID . INC  (56)
	exp : ID . DEC  (57)

	SEQ  shift 36
	MEQ  shift 37
	INC  shift 38
	DEC  shift 39
	'='  shift 40
	EQ  reduce 32
	LEQ  reduce 32
	GEQ  reduce 32
	NEQ  reduce 32
	AND  reduce 32
	OR  reduce 32
	'?'  reduce 32
	'>'  reduce 32
	'<'  reduce 32
	'+'  reduce 32
	'-'  reduce 32
	'*'  reduce 32
	'/'  reduce 32
	'%'  reduce 32
	';'  reduce 32


state 21
	exp : NUM .  (29)

	.  reduce 29


state 22
	cmd : READ . '(' ID ')' ';'  (20)

	'('  shift 41
	.  error


state 23
	cmd : WRITE . '(' LIT ')' ';'  (17)
	cmd : WRITE . '(' LIT $$4 ',' exp ')' ';'  (19)

	'('  shift 42
	.  error


state 24
	cmd : IF . '(' exp $$7 ')' cmd restoIf  (25)

	'('  shift 43
	.  error


state 25
	cmd : WHILE . $$5 '(' exp ')' $$6 cmd  (23)
	$$5 : .  (21)

	.  reduce 21

	$$5  goto 44


state 26
	exp : TRUE .  (30)

	.  reduce 30


state 27
	exp : FALSE .  (31)

	.  reduce 31


state 28
	exp : INC . ID  (54)

	ID  shift 45
	.  error


state 29
	exp : DEC . ID  (55)

	ID  shift 46
	.  error


state 30
	exp : '!' . exp  (34)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 48


state 31
	exp : '(' . exp ')'  (33)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 49


state 32
	cmd : '{' . lcmd '}'  (15)
	lcmd : .  (13)

	.  reduce 13

	lcmd  goto 50


state 33
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 51
	.  error


state 34
	lcmd : lcmd cmd .  (12)

	.  reduce 12


state 35
	cmd : exp . ';'  (16)
	exp : exp . '+' exp  (35)
	exp : exp . '-' exp  (36)
	exp : exp . '*' exp  (37)
	exp : exp . '/' exp  (38)
	exp : exp . '%' exp  (39)
	exp : exp . '>' exp  (40)
	exp : exp . '<' exp  (41)
	exp : exp . EQ exp  (42)
	exp : exp . LEQ exp  (43)
	exp : exp . GEQ exp  (44)
	exp : exp . NEQ exp  (45)
	exp : exp . OR exp  (46)
	exp : exp . AND exp  (47)
	exp : exp . '?' $$9 exp ':' $$10 exp  (50)

	EQ  shift 52
	LEQ  shift 53
	GEQ  shift 54
	NEQ  shift 55
	AND  shift 56
	OR  shift 57
	'?'  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	';'  shift 66
	.  error


state 36
	exp : ID SEQ . exp  (52)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 67


state 37
	exp : ID MEQ . exp  (53)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 68


state 38
	exp : ID INC .  (56)

	.  reduce 56


state 39
	exp : ID DEC .  (57)

	.  reduce 57


state 40
	cmd : ID '=' . exp ';'  (14)
	exp : ID '=' . exp  (51)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 69


state 41
	cmd : READ '(' . ID ')' ';'  (20)

	ID  shift 70
	.  error


state 42
	cmd : WRITE '(' . LIT ')' ';'  (17)
	cmd : WRITE '(' . LIT $$4 ',' exp ')' ';'  (19)

	LIT  shift 71
	.  error


state 43
	cmd : IF '(' . exp $$7 ')' cmd restoIf  (25)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 72


state 44
	cmd : WHILE $$5 . '(' exp ')' $$6 cmd  (23)

	'('  shift 73
	.  error


state 45
	exp : INC ID .  (54)

	.  reduce 54


state 46
	exp : DEC ID .  (55)

	.  reduce 55


state 47
	exp : ID .  (32)
	exp : ID . '=' exp  (51)
	exp : ID . SEQ exp  (52)
	exp : ID . MEQ exp  (53)
	exp : ID . INC  (56)
	exp : ID . DEC  (57)

	SEQ  shift 36
	MEQ  shift 37
	INC  shift 38
	DEC  shift 39
	'='  shift 74
	EQ  reduce 32
	LEQ  reduce 32
	GEQ  reduce 32
	NEQ  reduce 32
	AND  reduce 32
	OR  reduce 32
	'?'  reduce 32
	':'  reduce 32
	'>'  reduce 32
	'<'  reduce 32
	'+'  reduce 32
	'-'  reduce 32
	'*'  reduce 32
	'/'  reduce 32
	'%'  reduce 32
	')'  reduce 32
	';'  reduce 32


state 48
	exp : '!' exp .  (34)
	exp : exp . '+' exp  (35)
	exp : exp . '-' exp  (36)
	exp : exp . '*' exp  (37)
	exp : exp . '/' exp  (38)
	exp : exp . '%' exp  (39)
	exp : exp . '>' exp  (40)
	exp : exp . '<' exp  (41)
	exp : exp . EQ exp  (42)
	exp : exp . LEQ exp  (43)
	exp : exp . GEQ exp  (44)
	exp : exp . NEQ exp  (45)
	exp : exp . OR exp  (46)
	exp : exp . AND exp  (47)
	exp : exp . '?' $$9 exp ':' $$10 exp  (50)

	.  reduce 34


state 49
	exp : '(' exp . ')'  (33)
	exp : exp . '+' exp  (35)
	exp : exp . '-' exp  (36)
	exp : exp . '*' exp  (37)
	exp : exp . '/' exp  (38)
	exp : exp . '%' exp  (39)
	exp : exp . '>' exp  (40)
	exp : exp . '<' exp  (41)
	exp : exp . EQ exp  (42)
	exp : exp . LEQ exp  (43)
	exp : exp . GEQ exp  (44)
	exp : exp . NEQ exp  (45)
	exp : exp . OR exp  (46)
	exp : exp . AND exp  (47)
	exp : exp . '?' $$9 exp ':' $$10 exp  (50)

	EQ  shift 52
	LEQ  shift 53
	GEQ  shift 54
	NEQ  shift 55
	AND  shift 56
	OR  shift 57
	'?'  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	')'  shift 75
	.  error


state 50
	lcmd : lcmd . cmd  (12)
	cmd : '{' lcmd . '}'  (15)

	ID  shift 20
	NUM  shift 21
	READ  shift 22
	WRITE  shift 23
	IF  shift 24
	WHILE  shift 25
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	'{'  shift 32
	'}'  shift 76
	.  error

	cmd  goto 34
	exp  goto 35


state 51
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 52
	exp : exp EQ . exp  (42)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 77


state 53
	exp : exp LEQ . exp  (43)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 78


state 54
	exp : exp GEQ . exp  (44)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 79


state 55
	exp : exp NEQ . exp  (45)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 80


state 56
	exp : exp AND . exp  (47)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 81


state 57
	exp : exp OR . exp  (46)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 82


state 58
	exp : exp '?' . $$9 exp ':' $$10 exp  (50)
	$$9 : .  (48)

	.  reduce 48

	$$9  goto 83


state 59
	exp : exp '>' . exp  (40)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 84


state 60
	exp : exp '<' . exp  (41)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 85


state 61
	exp : exp '+' . exp  (35)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 86


state 62
	exp : exp '-' . exp  (36)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 87


state 63
	exp : exp '*' . exp  (37)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 88


state 64
	exp : exp '/' . exp  (38)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 89


state 65
	exp : exp '%' . exp  (39)

	ID  shift 47
	NUM  shift 21
	TRUE  shift 26
	FALSE  shift 27
	INC  shift 28
	DEC  shift 29
	'!'  shift 30
	'('  shift 31
	.  error

	exp  goto 90


state 66
	cmd : exp ';' .  (16)

	.  reduce 16


state 67
	exp : exp . '+' exp  (35)
	exp : exp . '-' exp  (36)
	exp : exp . '*' exp  (37)
	exp : exp . '/' exp  (38)
	exp : exp . '%' exp  (39)
	exp : exp . '>' exp  (40)
	exp : exp . '<' exp  (41)
	exp : exp . EQ exp  (42)
	exp : exp . LEQ exp  (43)
	exp : exp . GEQ exp  (44)
	exp : exp . NEQ exp  (45)
	exp : exp . OR exp  (46)
	exp : exp . AND exp  (47)
	exp : exp . '?' $$9 exp ':' $$10 exp  (50)
	exp : ID SEQ exp .  (52)

	EQ  shift 52
	LEQ  shift 53
	GEQ  shift 54
	NEQ  shift 55
	AND  shift 56
	OR  shift 57
	'?'  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	':'  reduce 52
	')'  reduce 52
	';'  reduce 52


state 68
	exp : exp . '+' exp  (35)
	exp : exp . '-' exp  (36)
	exp : exp . '*' exp  (37)
	exp : exp . '/' exp  (38)
	exp : exp . '%' exp  (39)
	exp : exp . '>' exp  (40)
	exp : exp . '<' exp  (41)
	exp : exp . EQ exp  (42)
	exp : exp . LEQ exp  (43)
	exp : exp . GEQ exp  (44)
	exp : exp . NEQ exp  (45)
	exp : exp . OR exp  (46)
	exp : exp . AND exp  (47)
	exp : exp . '?' $$9 exp ':' $$10 exp  (50)
	exp : ID MEQ exp .  (53)

	EQ  shift 52
	LEQ  shift 53
	GEQ  shift 54
	NEQ  shift 55
	AND  shift 56
	OR  shift 57
	'?'  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	':'  reduce 53
	')'  reduce 53
	';'  reduce 53


69: shift/reduce conflict (shift 91, reduce 51) on ';'
state 69
	cmd : ID '=' exp . ';'  (14)
	exp : exp . '+' exp  (35)
	exp : exp . '-' exp  (36)
	exp : exp . '*' exp  (37)
	exp : exp . '/' exp  (38)
	exp : exp . '%' exp  (39)
	exp : exp . '>' exp  (40)
	exp : exp . '<' exp  (41)
	exp : exp . EQ exp  (42)
	exp : exp . LEQ exp  (43)
	exp : exp . GEQ exp  (44)
	exp : exp . NEQ exp  (45)
	exp : exp . OR exp  (46)
	exp : exp . AND exp  (47)
	exp : exp . '?' $$9 exp ':' $$10 exp  (50)
	exp : ID '=' exp .  (51)

	EQ  shift 52
	LEQ  shift 53
	GEQ  shift 54
	NEQ  shift 55
	AND  shift 56
	OR  shift 57
	'?'  shift 58
	'>'  shift 59
	'<'  shift 60
	'+'  shift 61
	'-'  shift 62
	'*'  shift 63
	'/'  shift 64
	'%'  shift 65
	';'  shift 91


state 70
	cmd : READ '(' ID . ')' ';'  (20)

	')'  shift 92
	.  error


state 71
	cmd : WRITE '(' LIT . ')' ';'  (17)
	cmd : WRITE '(' LIT . $$4 ',' exp ')' ';'  (19)
	$$4 : .  (18)

	')'  shift 93
	','  reduce 18

	$$4  goto 94

